--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#D6C3C9" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Solid App</title>
+    
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <meta name="title" content="Do you love me?" />
+    <meta name="description" content="I have one question for you....." />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="author" content="Vladimir Borisov" />
+
+    <title>Do you love me?</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
